(feat): added entity class for customer objects, added html templates for each page we may need

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,18 @@
     <title th:text="${title}">"</title>
 </head>
 <body>
+    <a href="">
+        Home
+    </a>
+    <button>
+        Customers
+    </button>
+    <button>
+        Orders
+    </button>
+    <button>
+        Products
+    </button>
     <h1 th:text="${title}">Mini-Shopify</h1>
     <p>Welcome to our Store</p>
 </body>
