--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,6 @@
         Products
     </button>
     <h1 th:text="${title}">Mini-Shopify</h1>
-    <p>Welcome to our Store</p>
+    <p>Welcome to our e-commerce platform</p>
 </body>
 </html>
