fix: fixed store search button on homepage

--- a/src/main/resources/templates/storeHomePage.html
+++ b/src/main/resources/templates/storeHomePage.html
@@ -83,7 +83,7 @@
 
 <section id="list-stores">
     <h2>Our Vendors</h2>
-    <form id="search-form" action="http://localhost:8080/stores/search" method="GET">
+    <form id="search-form" action="stores/search" method="GET">
         <button type="submit">Search for Stores</button>
     </form>
     <ul id="store-list"></ul>
