--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -138,7 +138,7 @@
             };
 
             try {
-                const response = await fetch(`/products/create/${storeId}`, {
+                const response = await fetch(`/products/${storeId}/create`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(productData)
