feat: added product creation in the merchant dashboard. added a separate search page for merchants that allow them to open the dashboard for stores

--- a/src/main/resources/templates/createStore.html
+++ b/src/main/resources/templates/createStore.html
@@ -83,9 +83,7 @@
 
 <section id="list-stores">
     <h2>Our Vendors</h2>
-    <form id="search-form" action="stores/search" method="GET">
-        <button type="submit">Search for Stores</button>
-    </form>
+    <button onclick="window.location.href='/store/search/merchant'">Search for Stores</button>
     <ul id="store-list"></ul>
 </section>
 
