--- a/src/main/resources/templates/merchantHomePage.html
+++ b/src/main/resources/templates/merchantHomePage.html
@@ -70,12 +70,8 @@
         Create Store
     </button>
 
-    <button class="dash-btn" onclick="window.location.href='/merchant/create-item'">
-        Create Item
-    </button>
-
-    <button class="dash-btn" onclick="window.location.href='/merchant/stores'">
-        View My Stores
+    <button class="dash-btn" onclick="window.location.href='/products/select-store'">
+        Create Product
     </button>
 
     <button class="dash-btn" onclick="window.location.href='/'">
